--- a/README
+++ b/README
@@ -7,17 +7,21 @@ For people who only use GNU Screen, Firefox  and/or Emacs all day long, it's rea
 Shouts to:
 - dimigon ( thanks for the sighandler part :) and some other coding stuff I learned after your submitted patch )
 - wonder  ( thanks for the help with the PKGBUILD )
+- rob|    ( thanks for the SIGALRM info )
+
 INSTALL
 
-$ vim conf.h
+open conf.h
 < edit settings / keys / colors >
 $ make
 $ sudo make install
 
 RUNNING
 
-$ vim ~/.xinitrc
-exec xsetroot -cursor_name left_ptr -solid "Gray50" &
+Just run barewm (from xinitrc, or make a session for it)
+xinitrc example:
+
+exec xsetroot -solid "Gray50" &
 exec barewm
 $ startx
 
@@ -35,7 +39,7 @@ echo -n "$INFO"
 USAGE
 Configuration is done by modifying the conf.h file and recompiling.
 The default keybindings are:
-- MOD = Left ALT key
+- MOD = Default is the ALT key (Mod1Mask).
 - MOD + t : enter command mode
 All following keys are issued when in command mode
 - c : spawn terminal (defaults to urxvt)
@@ -47,7 +51,7 @@ All following keys are issued when in command mode
 - s : show message containing output from the command defined at as STATUS in conf.h
 
 TODO
-1. Handle the timeout better.
+1. Handle TIMEOUT better, sleep freezes input. < done!
 2. Custom key bindings. Working on implementing message and spawn bindings for now.
    Useful if you want to set bindings to run your own scripts, for example to display system stats or whatnot
    using the built-in messaging system.
@@ -59,3 +63,8 @@ NEWS:
 
 29.04.2009 - Added a status feature (outputs the result from the command defined at STATUS)
            - Added options for custom cursors (only ones found in X11/cursorfont.h)
+15.10.2009 - Wrote timeout handler, so it doesn't block when messages are displayed
+           - Started working on a logo, I know it's soon but I need to practice
+             my drawing skills :)
+           - Started doing a complete clean-up of the code, especially the color
+           - handling
