--- a/README
+++ b/README
@@ -66,5 +66,4 @@ NEWS:
 15.10.2009 - Wrote timeout handler, so it doesn't block when messages are displayed
            - Started working on a logo, I know it's soon but I need to practice
              my drawing skills :)
-           - Started doing a complete clean-up of the code, especially the color
-           - handling
+           - Started doing a complete clean-up of the code, especially the color handling
