--- a/README
+++ b/README
@@ -64,6 +64,5 @@ NEWS:
 29.04.2009 - Added a status feature (outputs the result from the command defined at STATUS)
            - Added options for custom cursors (only ones found in X11/cursorfont.h)
 15.10.2009 - Wrote timeout handler, so it doesn't block when messages are displayed
-           - Started working on a logo, I know it's soon but I need to practice
-             my drawing skills :)
+           - Started working on a logo, I know it's soon but I need to practice my drawing skills :)
            - Started doing a complete clean-up of the code, especially the color handling
