--- a/README
+++ b/README
@@ -8,6 +8,7 @@ Shouts to:
 - dimigon ( thanks for the sighandler part :) and some other coding stuff I learned after your submitted patch )
 - wonder  ( thanks for the help with the PKGBUILD )
 - rob|    ( thanks for the SIGALRM info )
+- meth0dz ( thanks for the massive cleanup of the code! )
 
 INSTALL
 
@@ -66,3 +67,10 @@ NEWS:
 15.10.2009 - Wrote timeout handler, so it doesn't block when messages are displayed
            - Started working on a logo, I know it's soon but I need to practice my drawing skills :)
            - Started doing a complete clean-up of the code, especially the color handling
+16.10.2009 - Implemented most of methodz suggestions and code
+           - Killing windows now selects the previous (or next, depending on the outcome
+             of the previous selection ).
+           - at meth0dz's suggestion, I switched to C99, thus having to mess a bit with the
+             code to even get it to compile. Nothing serious though
+           - Started work on cleaning the ugly switch/case parts that take care of the
+             messaging position. I will transform this into a single function
