--- a/README
+++ b/README
@@ -69,7 +69,7 @@ NEWS:
            - Started doing a complete clean-up of the code, especially the color handling
 16.10.2009 - Implemented most of methodz suggestions and code
            - Killing windows now selects the previous (or next, depending on the outcome
-             of the previous selection ).
+             of the previous selection) window.
            - at meth0dz's suggestion, I switched to C99, thus having to mess a bit with the
              code to even get it to compile. Nothing serious though
            - Started work on cleaning the ugly switch/case parts that take care of the
